# godot_accesskit_demo

./: .gitignore  .gitmodules  README.md  SConstruct  build_linux.sh  build_macos.sh  build_windows.cmd
demo/: accesskit.gdextension  main.gd  main.tscn  project.godot  subwindow.tscn
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/platform_impl/: mod.rs  null.rs  windows.rs
src/: accesskit_dse.cpp  example.cpp
