[package]
name = "accesskit_godot_plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "accesskit_godot_plugin"
crate-type = ["staticlib"]

[dependencies]
accesskit = { version ="0.4.0", features = ["serde"] }
accesskit_windows = "0.4.0"
lazy_static = "1.4.0"
serde_json = "1.0"

[dependencies.windows]
version = "0.37.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]